# pingvin-share-shell

./: .gitignore  Cargo.toml  README.MD
.github/workflows/: rust.yml
installer/: .gitignore  PingvinConfig.nsddef  PingvinConfig.nsdinc  installer.nsi
installer/plugins/pingvin/: Cargo.toml
installer/plugins/pingvin/.cargo/: config.toml
installer/plugins/pingvin/src/: lib.rs
pingvin-cli/: Cargo.toml
pingvin-cli/src/: logger.rs  main.rs
pingvin-cli/src/api/: mod.rs  share.rs
pingvin-cli/src/output/: console.rs  mod.rs  win.rs
pingvin-share/: Cargo.toml  build.rs
pingvin-share/src/: logger.rs  main.rs
pingvin-share/src/api/: config.rs  mod.rs
pingvin-share/src/output/: log.rs  mod.rs  win.rs
windows-shell/: Cargo.toml  build.rs
windows-shell/sparse/: Cargo.toml  build.rs
windows-shell/sparse/package/: AppxManifest.xml
windows-shell/sparse/src/: lib.rs
windows-shell/src/: config.rs  exports.rs  lib.rs  logger.rs  util.rs
windows-shell/src/com/: factory.rs  handler.rs  mod.rs
windows-shell/src/installer/: legacy_ctx_menu.rs  mod.rs  sparse.rs
